# luajit.cmake

./: .gitignore  .travis.yml  CMakeLists.txt
